--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -50,7 +50,7 @@
                 <div id="manset">
                     <h2>Pardus 2008.2 RC1 Gazze Hazır...</h2>
                     <p>Mevcut kararlı sürümümüz Pardus 2008'in planlanan son güncelleme sürümü Pardus 2008.2'nin hazırlıkları da tamamlanıyor. 30 Ocak günü yayımlanacak olan Pardus 2008.2 için bir kilometre taşı da bugün yayımladığımız sürüm adayı Pardus 2008.2 RC1.
-                    <p>Çekirdek geliştirici ekip olarak bu sürüm adayına <strong>Gazze</strong> kod adını vermeyi kararlaştırdık. Haftalardır süren ve yüzlerce sivilin ölümüne, yüzbinlerce kişinin de sağlık, gıda ve diğer temel gereksinimlerden mahrum kalmasına neden olan bu insanlık trajedisinin bir an önce sona ermesi ve Gazze'deki Filistin halkının bir an önce can güvenliğine ve insanca yaşam koşullarına kavuşması ortak temennimiz.
+                    <p>Çekirdek geliştirici ekip olarak bu sürüm adayına <strong>Gazze</strong> kod adını vermeyi kararlaştırdık. Haftalardır süren ve yüzlerce sivilin ölümüne, yüzbinlerce kişinin de sağlık, gıda ve diğer temel gereksinimlerden mahrum kalmasına neden olan bu insanlık trajedisinin bir an önce sona ermesi ortak temennimiz. Gazze'deki Filistin halkı can güvenliğine ve insanca yaşam koşullarına kavuşmalı.
                     <a href="resim/alwayshope.png"><img src="resim/alwayshope_mini.png" align="right" border="0" alt="There is always hope" style="margin:10px;padding-top:10px;"/></a>
                     <p>Banksy isimli grafitti sanatçısının İsrail-Filistin arasındaki duvara yaptığı şu grafitti sanırız ortak düşüncemizi dillendiriyor: Her zaman bir ümit vardır...
                     <p>Sürüm adayı ile ilgili <a href="http://liste.pardus.org.tr/duyuru/2009-January/000077.html">Pardus 2008.2 RC1 resmi duyurusu</a> da listelerde yerini aldı.
