--- a/web/miss/basin/haber08.html
+++ b/web/miss/basin/haber08.html
@@ -71,10 +71,19 @@
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.05.01/Bilisim-Mayis2008-ozgurlukicin.jpeg">Bilişim</a>, 01.05.2008</span> <br><i>"Tehlikenin farkında mısınız?"</i>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.05.01/Linuxnet-Mayis08-Pardus3.jpeg">LINUXnet</a>, 01.05.2008</span> <br><i>"KDE4 Pardus'ta"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Bilisim-Nisan2008.jpeg">Bilişim</a>, 01.04.2008</span> <br><i>"Pardus, İnovasyon ve TIO"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Linuxnet-nisan-gsoc.jpeg">LINUXnet</a>, 01.04.2008</span> <br><i>"Pardus Summer of Code"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcNet-Mart2008.jpeg">PCNet</a>, 01.03.2008</span> <br><i>"Beşi bir yerde"</i>
 						<br /><br />
 
-						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-Linuxnet-gamepad.jpeg">LinuxNet</a>, 01.03.2008</span> <br><i>"Linux'ta gamepad keyfi"</i>
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-Linuxnet-gamepad.jpeg">LINUXnet</a>, 01.03.2008</span> <br><i>"Linux'ta gamepad keyfi"</i>
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcMagazine-mart2008.jpeg">PCMagazine</a>, 01.03.2008</span> <br><i>"Bu ne yaman çelişki?"</i>
