--- a/web/miss/basin/haber08.html
+++ b/web/miss/basin/haber08.html
@@ -71,6 +71,9 @@
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.05.01/Bilisim-Mayis2008-ozgurlukicin.jpeg">Bilişim</a>, 01.05.2008</span> <br><i>"Tehlikenin farkında mısınız?"</i>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> LINUXnet, 01.05.2008 <span style="font-size:12px"><a href="./2008.05.01/Linuxnet-Mayis08-p12.jpeg">Sayfa 12</a>, <a href="./2008.05.01/Linuxnet-Mayis08-p13.jpeg">Sayfa 13</a></span></span> <br><i>"Pardus'a taşının"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.05.01/Linuxnet-Mayis08-Pardus3.jpeg">LINUXnet</a>, 01.05.2008</span> <br><i>"KDE4 Pardus'ta"</i>
 						<br /><br />
 
@@ -78,6 +81,9 @@
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Linuxnet-nisan-gsoc.jpeg">LINUXnet</a>, 01.04.2008</span> <br><i>"Pardus Summer of Code"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> PCNet, 01.03.2008 <span style="font-size:12px"><a href="./2008.03.01/Pcnet-mart08-138.jpeg">Sayfa 138</a>, <a href="./2008.03.01/Pcnet-mart08-139.jpeg">Sayfa 139</a></span></span> <br><i>"Teknoloji gelişiyor"</i>
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcNet-Mart2008.jpeg">PCNet</a>, 01.03.2008</span> <br><i>"Beşi bir yerde"</i>
