çekirdek/core çıkartıldı

--- a/trunk/web/miss/eng/index.html
+++ b/trunk/web/miss/eng/index.html
@@ -39,7 +39,7 @@
                     <h2>Pardus 2008.2 RC1 Gaza is Ready...</h2>
                     <p>The last planned update for our present stable product Pardus 2008 is closing to completion. Pardus 2008.2 will be released on January 30th, and the first release candidate Pardus 2008.2 RC1 is out as of today.
                     <a href="../resim/alwayshope.png"><img src="../resim/alwayshope_mini.png" align="right" border="0" alt="There is always hope" style="margin:10px;padding-top:10px;"/></a>
-                    <p>The core team has decided to code name this release candidate as <strong>Gaza</strong>. It is our sincere wish to have an end to this tragedy lasting for weeks, killing hundreds of civilians, and stripping hundreds of thousands off of health, food and other basic needs. Palestinian people in Gaza surely deserve life safety and proper living conditions.
+                    <p>The TUBITAK UEKAE based developers have decided to code name this release candidate as <strong>Gaza</strong>. It is our sincere wish to have an end to this tragedy lasting for weeks, killing hundreds of civilians, and stripping hundreds of thousands off of health, food and other basic needs. Palestinian people in Gaza surely deserve life safety and proper living conditions.
                     <p>The graffiti artist Banksy (known for his works on the wall separating Israil and Palestin, as well) speaks for all of us: There is always hope...
                     <p><a href="http://liste.pardus.org.tr/pardus-announce/2009-January/000050.html">The official Pardus 2008.2 RC1 release announcement</a> may be found in the e-mail lists.
                     <p><small><strong>PS:</strong> Thanks to our beloved A. Murat "Meren" Eren for the anonymous Bansky photo...</small>
