--- a/web/miss/basin/haber08.html
+++ b/web/miss/basin/haber08.html
@@ -80,6 +80,9 @@
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Bilisim-Nisan2008.jpeg">Bilişim</a>, 01.04.2008</span> <br><i>"Pardus, İnovasyon ve TIO"</i>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Linuxnet-Nisan-sf5.jpeg">LINUXnet</a>, 01.04.2008</span> <br><i>"Pardus '08 yaz stajı başlıyor"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.04.01/Linuxnet-nisan-gsoc.jpeg">LINUXnet</a>, 01.04.2008</span> <br><i>"Pardus Summer of Code"</i>
 						<br /><br />
 
@@ -87,6 +90,9 @@
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-PcNet-Mart2008.jpeg">PCNet</a>, 01.03.2008</span> <br><i>"Beşi bir yerde"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> LINUXnet, 01.03.2008 <span style="font-size:12px"><a href="./2008.03.01/Linuxnet-Mart08-s22.jpeg">Sayfa 22</a>, <a href="./2008.03.01/Linuxnet-Mart08-s23.jpeg">Sayfa 23</a></span></span> <br><i>"Dağıtımlar"</i>
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-Linuxnet-gamepad.jpeg">LINUXnet</a>, 01.03.2008</span> <br><i>"Linux'ta gamepad keyfi"</i>
