--- a/trunk/web/miss/basin/haber08.html
+++ b/trunk/web/miss/basin/haber08.html
@@ -62,6 +62,12 @@
 						<span class="metin">2008 yılında gazete ve dergilerde yayımlanan haberlerin bir bölümüne aşağıdan ulaşabilirsiniz...</span>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.12.01/Bilisim-Aralik08-oi.jpeg">Bilişim</a>, 01.12.2008</span> <br><i>"Özgür yazılımla katlanan verimlilik"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.12.01/Bilisim-Aralik08-sf29.jpeg">Bilişim</a>, 01.12.2008</span> <br><i>"Pardus'un kurumsal kimlik arayışı"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.08.01/BYTE-Agustos08-01.jpeg">BYTE</a>, 01.08.2008</span> <br><i>"Pardus işletim sisteminin avantajları nelerdir?"</i>
 						<br /><br />
 
