--- a/trunk/web/miss/basin/haber08.html
+++ b/trunk/web/miss/basin/haber08.html
@@ -101,6 +101,9 @@
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> LINUXnet, 01.03.2008 <span style="font-size:12px"><a href="./2008.03.01/Linuxnet-Mart08-s22.jpeg">Sayfa 22</a>, <a href="./2008.03.01/Linuxnet-Mart08-s23.jpeg">Sayfa 23</a></span></span> <br><i>"Dağıtımlar"</i>
 						<br /><br />
 
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Bilisim-Mart08-oi.jpeg">Bilişim</a>, 01.03.2008</span> <br><i>"Özgür yazılım neden satıyor?"</i>
+						<br /><br />
+
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.03.01/Pardus-Linuxnet-gamepad.jpeg">LINUXnet</a>, 01.03.2008</span> <br><i>"Linux'ta gamepad keyfi"</i>
 						<br /><br />
 
@@ -108,6 +111,9 @@
 						<br /><br />
 
 						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.01.01/Pardus-PcNet-Ocak2008-01.jpeg">PCNet</a>, 01.01.2008</span> <br><i>"Amerikalı yine önde"</i>
+						<br /><br />
+
+						<span class="baslik"><img src="../images/bullet-krm.png" alt=""> <a href="./2008.01.01/Bilisim-Ocak08-oi.jpeg">Bilişim</a>, 01.01.2008</span> <br><i>"Bedava mı, Açık mı, Özgür mü?"</i>
 						<br /><br />
 
 </p>
