--- a/trunk/web/miss/eng/index.html
+++ b/trunk/web/miss/eng/index.html
@@ -42,8 +42,8 @@
                     <p>The TUBITAK UEKAE based developers have decided to code name this release candidate as <strong>Gaza</strong>. It is our sincere wish to have an end to this tragedy lasting for weeks, killing hundreds of civilians, and stripping hundreds of thousands off of health, food and other basic needs. Palestinian people in Gaza surely deserve life safety and proper living conditions.
                     <p>The graffiti artist Banksy (known for his works on the wall separating Israil and Palestin, as well) speaks for all of us: There is always hope...
                     <p><a href="http://liste.pardus.org.tr/pardus-announce/2009-January/000050.html">The official Pardus 2008.2 RC1 release announcement</a> may be found in the e-mail lists.
-                    <p><small><strong>PS:</strong> Thanks to our beloved A. Murat "Meren" Eren for the anonymous Bansky photo...</small>
-                    <p><small><strong>PS2:</strong> We have written that the Bansky graffiti is on the Israeli-Palestinian wall, but apparently it is somewhere in England. We stand corrected...</small>
+                    <p><small><strong>PS:</strong> Thanks to our beloved A. Murat "Meren" Eren for the anonymous Banksy photo...</small>
+                    <p><small><strong>PS2:</strong> We have written that the Banksy graffiti is on the Israeli-Palestinian wall, but apparently it is somewhere in England. We stand corrected...</small>
 
 <TD width="30%" valign="top">
 <!-- haberler -->
