--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -54,7 +54,7 @@
                     <a href="resim/alwayshope.png"><img src="resim/alwayshope_mini.png" align="right" border="0" alt="There is always hope" style="margin:10px;padding-top:10px;"/></a>
                     <p>İsrail ile Filistin'i ayıran duvar üzerindeki çalışmaları ile de tanınan Banksy isimli graffiti sanatçısının bu çalışması sanırız hepimizin düşüncesini dillendiriyor: Her zaman bir ümit vardır...
                     <p>Sürüm adayı ile ilgili <a href="http://liste.pardus.org.tr/duyuru/2009-January/000077.html">Pardus 2008.2 RC1 resmi duyurusu</a> da listelerde yerini aldı.
-                    <p><br><small><strong>Not:</strong> Anonim Bansky fotoğrafı için sevgili A. Murat Eren'e teşekkürler...</small>
+                    <p><br><small><strong>Not:</strong> Anonim Banksy fotoğrafı için sevgili A. Murat Eren'e teşekkürler...</small>
                     <p><br><small><strong>Not2:</strong> Bansky'nin graffitisini "İsrail-Filistin arasındaki duvar[da]" diyerek duyurmuştuk, oysa büyük olasılıkla İngiltere'de olduğu bilgisine ulaştık. Düzeltir, özür dileriz...</small>
                 </div>
             </div>
