revert rc1 announcement..

--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -48,14 +48,13 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008.2 RC1 Gazze Hazır...</h2>
-                    <p>Mevcut kararlı sürümümüz Pardus 2008'in planlanan son güncelleme sürümü Pardus 2008.2'nin hazırlıkları tamamlanıyor. 30 Ocak günü yayımlanacak olan Pardus 2008.2 için bir kilometre taşı da bugün yayımladığımız sürüm adayı Pardus 2008.2 RC1.
-                    <p>TÜBİTAK UEKAE'de görevli geliştirici ekip olarak bu sürüm adayına <strong>Gazze</strong> kod adını vermeyi kararlaştırdık. Haftalardır süren ve yüzlerce sivilin ölümüne, yüzbinlerce kişinin de sağlık, gıda ve diğer temel gereksinimlerden mahrum kalmasına neden olan bu insanlık trajedisinin bir an önce sona ermesi ortak temennimiz. Gazze'deki Filistin halkı can güvenliğine ve insanca yaşam koşullarına kavuşmalı.
-                    <a href="resim/alwayshope.png"><img src="resim/alwayshope_mini.png" align="right" border="0" alt="There is always hope" style="margin:10px;padding-top:10px;"/></a>
-                    <p>İsrail ile Filistin'i ayıran duvar üzerindeki çalışmaları ile de tanınan Banksy isimli graffiti sanatçısının bu çalışması sanırız hepimizin düşüncesini dillendiriyor: Her zaman bir ümit vardır...
-                    <p>Sürüm adayı ile ilgili <a href="http://liste.pardus.org.tr/duyuru/2009-January/000077.html">Pardus 2008.2 RC1 resmi duyurusu</a> da listelerde yerini aldı.
-                    <p><br><small><strong>Not:</strong> Anonim Banksy fotoğrafı için sevgili A. Murat Eren'e teşekkürler...</small>
-                    <p><br><small><strong>Not2:</strong> Banksy'nin graffitisini "İsrail-Filistin arasındaki duvar[da]" diyerek duyurmuştuk, oysa büyük olasılıkla İngiltere'de olduğu bilgisine ulaştık. Düzeltir, özür dileriz...</small>
+                    <h2><em>"Mahalledeki Yeni Çocuk: Pardus Linux Dağıtımı"</em><br />OSOR Vaka Raporu</h2>
+                    <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution"><img src="resim/osor.png" align="right" border="0" alt="Pardus seminer" style="margin:10px;padding-top:20px;"/></a>
+                    <p>Avrupa Komisyonu'nun <a href="http://osor.eu">Özgür Yazılım Gözlemevi ve Deposu</a> (OSOR) Pardus ile ilgili bir <a href="http://www.osor.eu/case_studies/a-new-kid-on-the-block-the-turkish-pardus-linux-distribution">vaka raporu</a> yayımladı. Suleyman K. Sowe tarafından hazırlanan rapor, Pardus'u her yönüyle ve ayrıntılı olarak inceliyor</p>
+                    <p>Raporun sonuç bölümünde şunlar yazıyor:</p>
+                    <blockquote><em>Pardus, pek çok gönüllü geliştiricinin zaman ve çabalarını vermeleri sayesinde başarılı olan canlı bir özgür yazılım projesi. UEKAE'nin geliştirme sürecine katılışı ve yol haritasını yönetmesi projenin uzun vadede sürdürülebilirliğini güvenceye alıyor. Pardus'u internetten edinenlerin ve Pardus kullanan kurumların Türkiye'nin her yerine dağılmış olması, projenin Türkiye Linux kullanıcılarına kendi dillerinde bir işletim sistemi sunma hedefine ulaştığını ve candan kabul gördüğünü gösteriyor.</em></blockquote>
+                            
+                    <blockquote><em>UEKAE, iş ortakları ve camiayı içine alan yönetişim modeli son derece ilginç bir girişim ve özgür yazılım camiası tarafından yakından izleneceğe benziyor. Bu üç paydaş Pardus hedefleri için birarada çalışabilirlerse özgür yazılım camiası çok değerli bir ürün kazanacak. Kurumlar ve bireyler özgür yazılımdan yararlanma ve pazardaki pek çok ürünü deneme ve değerlendirmede benzeşiyorlar.Her kurum ve birey GNU/Linux dağıtımlarını farklı bir amaçla kullanmak istiyor. Pardus GNU/Linux kullanıcıların beklentilerini dikkate alıyor ve yavaş yavaş Türkiye'de kurum ve bireylerin tercih ettiği Linux dağıtımı haline geliyor. </em></blockquote>
                 </div>
             </div>
             <!-- Manşet Sonu -->
@@ -91,8 +90,8 @@
                     <ul>
                         <li>
                         <p class="metin"><strong>Özgürlük için...</strong> // Pardus camiasının toplanma noktası belirlendi: <a href="http://www.ozgurlukicin.com" target="_blank">ozgurlukicin.com</a>! Acemi Pardus kullanıcıları için ilk adımlar, daha fazla özellik arayanlar için paketler, eğlence meraklılarına oyunlar, haberleşmek için forum, aradığınız herşey...</p>
-                        <center><a href="banner/index.html" target="_blank"><img border="0" alt="Pardus... Özgürlük İçin..." title="Pardus... Özgürlük İçin..." src="http://www.pardus.org.tr/banner/buton2.png"></a></center>
                         </li>
+                        <center><a href="banner/index.html" target="_blank"><img border="0" alt="Pardus... Özgürlük İçin..." title="Pardus... Özgürlük İçin..." src="http://www.pardus.org.tr/banner/buton2.png"></a></center>
                         <li>
                             <p class="metin"><strong>Pardus'u tanıtın...</strong> // Pardus'un tanıtımına katkıda bulunmak için Pardus afiş ve düğmelerini sitenizde, blogunuzda yayınlayın, <a href="banner/index.html">burada</a>...</p>
                         </li>
@@ -130,6 +129,7 @@
         </div>
     </div>
 </div>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
         </div>
     </div>
 </div>
