Move release notes to subdirectory, fix index.html layout

--- a/trunk/web/miss/urunler/index.html
+++ b/trunk/web/miss/urunler/index.html
@@ -10,19 +10,17 @@
 <div id="container">
 <!--bar-->
 
-	<center>
+    <center>
         <table width="100%" cellpadding="0" cellspacing="0" id="ustserit">
-        	<tr style="background-image:url('../resim/tubnav.jpg');background-repeat: repeat-x;">
-        	<td height="25" style="padding-left:10px" align="left"> <div id="toggle" style="cursor:pointer;width:400px;"><a href="http://uekae.tubitak.gov.tr" target="_blank">TÜBİTAK UEKAE</a></div></td>
-        	</tr>
+            <tr style="background-image:url('../resim/tubnav.jpg');background-repeat: repeat-x;">
+            <td height="25" style="padding-left:10px" align="left"> <div id="toggle" style="cursor:pointer;width:400px;"><a href="http://uekae.tubitak.gov.tr" target="_blank">TÜBİTAK UEKAE</a></div></td>
+            </tr>
         </table>
        </center>
-	<script src="../tubnav.js" language="JavaScript" type="text/javascript"></script>
+    <script src="../tubnav.js" language="JavaScript" type="text/javascript"></script>
 
 <!--bar-->
 
-    <div id="head_grey">
-      <div id="blue">
     <div id="head_grey">
       <div id="blue">
         <map name="baslik_harita">
@@ -60,20 +58,21 @@
     <td width="661" valign="top" class="metin">
 
     <span class="baslik">
-          <img src="../images/bullet-krm.png"> Pardus 2008.1
+          <img src="../images/bullet-krm.png"> Pardus 2008.1 Hyaena hyaena
     </span>
     <br />
     <br />
-    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">Pardus 2008.1</a> (15.09.2008)
+    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008.1">Pardus 2008.1 Hyaena hyaena</a> (15.09.2008)
         <br />
         <br />
-        Yukarıdaki bağlantıya tıklayarak Pardus 2008.1 sürümünü
+        Yukarıdaki bağlantıya tıklayarak Pardus 2008.1 Hyaena hyaena sürümünü
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
-        başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
-        <a href="pardus-2008.1-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        başvurabilir, ayrıca özellikleri hakkında bilgi almak için
+        <a href="surumnotlari/pardus-2008.1-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
+    <br /><br />
     <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2008
     </span>
@@ -86,97 +85,97 @@
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
-        <a href="pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
-	<span class="baslik">
+    <br /><br />
+    <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007.3 Lynx lynx
         </span>
-	<br>
+    <br>
         <br>
-	<a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.3">Pardus 2007.3 Lynx lynx</a> (18.11.2007)
+    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.3">Pardus 2007.3 Lynx lynx</a> (18.11.2007)
         <br>
         <br>
         Yukarıdaki bağlantıya tıklayarak Pardus 2007.3 Lynx lynx sürümünü
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
-        <a href="pardus-2007.3-Lynx-lynx-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-2007.3-Lynx-lynx-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
-	<span class="baslik">
+    <br /><br />
+    <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007.2 Caracal caracal
         </span>
-	<br>
+    <br>
         <br>
-	<a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.2">Pardus 2007.2 Caracal caracal</a> (11.07.2007)
+    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.2">Pardus 2007.2 Caracal caracal</a> (11.07.2007)
         <br>
         <br>
         Yukarıdaki bağlantıya tıklayarak Pardus 2007.2 Caracal caracal sürümünü
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
-        <a href="pardus-2007.2-Caracal-caracal-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-2007.2-Caracal-caracal-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
-      <p>
+      <br /><br />
       <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007.1 Felis chaus
         </span>
-	<br>
+    <br>
         <br>
-	<a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.1">Pardus 2007.1 Felis chaus</a> (16.03.2007)
+    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007.1">Pardus 2007.1 Felis chaus</a> (16.03.2007)
         <br>
         <br>
         Yukarıdaki bağlantıya tıklayarak Pardus 2007.1 Felis chaus sürümünü
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
-        <a href="pardus-2007.1-Felis-chaus-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-2007.1-Felis-chaus-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
       <p>
       <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007
         </span>
-	<br>
+    <br>
         <br>
-	<a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007">Pardus 2007</a> (18.12.2006)
+    <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2007">Pardus 2007</a> (18.12.2006)
         <br>
         <br>
         Yukarıdaki bağlantıya tıklayarak Pardus 2007 sürümünü
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca 2007 sürümü özellikleri hakkında bilgi almak için 
-        <a href=pardus-2007-surum-notlari-tr.html>sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-2007-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
       <p>
         <span class="baslik"><img src="../images/bullet-krm.png"> Pardus Çalışan CD</span>
-	<br>
+    <br>
         <br>
         Çalışan CD bilgisayara kurulmadan CD okuyucunuz üzerinden çalışan Pardus sürümüdür. <a href="../indir.html">indir</a> sayfasında her zaman en yeni Çalışan CD'yi bulabilirsiniz...
-	<br>
+    <br>
         <br>
-	<ul>
-        <li><a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan">Pardus Çalışan CD</a> 2007.2 <em>11.07.2007</em>, 2007.1 <em>16.03.2007</em>, 2007 <em>18.12.2006</em>
-    </ul>
-	<br>
+        <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan">Pardus Çalışan CD</a> 2007.2 <em>11.07.2007</em>, 2007.1 <em>16.03.2007</em>, 2007 <em>18.12.2006</em>
+    <br>
       </p>
 
 
-	<span class="baslik">
+    <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 1.0
         </span>
-	<br>
+    <br>
         <br>
-	<a href="ftp://ftp.uludag.org.tr/pub/pardus/kurulan/eskiler/1.0/pardus-1.0.iso">Pardus 1.0</a> (26.12.2005)
+    <a href="ftp://ftp.uludag.org.tr/pub/pardus/kurulan/eskiler/1.0/pardus-1.0.iso">Pardus 1.0</a> (26.12.2005)
         <!-- (<a href="./yol-haritasi-1.0.html">Pardus 1.0 Yol Haritası</a>) -->
         <br>
         <br>
         Yukarıdaki bağlantıya tıklayarak Pardus 1.0 sürümünü
         indirebilir, özellikleri hakkında bilgi almak için 
-        <a href=pardus-1.0-surum-notlari-tr.html>sürüm notları</a> belgesini okuyabilirsiniz.
+        <a href="surumnotlari/pardus-1.0-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
 
     </td>
@@ -186,23 +185,22 @@
         </div>
 
         <div id="footnote">
-	<a href="http://www.uekae.tubitak.gov.tr" target="_blank"><img src="../resim/tubitak-uekae.png" style="float: left; valign: middle;" border="0" width="86" height="72"></a>
-		<p>
-		Bu web sitesinde bulunan bilgi ve belgelerin, kaynak gösterilmek koşulu ile kullanılması serbesttir.<br />
-		Pardus markası ve logotipi TÜBİTAK'ın tescilli markasıdır. Kullanım koşulları için <a href="../yasal_uyari.html">Yasal Uyarı</a> bölümünü inceleyiniz.<br /> 
-		Pardus hakkında merak ettikleriniz için lütfen <a href="../yardim.html">yardım</a> sayfasına başvurun.
-		<em>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</em>
+    <a href="http://www.uekae.tubitak.gov.tr" target="_blank"><img src="../resim/tubitak-uekae.png" style="float: left; valign: middle;" border="0" width="86" height="72"></a>
+        <p>
+        Bu web sitesinde bulunan bilgi ve belgelerin, kaynak gösterilmek koşulu ile kullanılması serbesttir.<br />
+        Pardus markası ve logotipi TÜBİTAK'ın tescilli markasıdır. Kullanım koşulları için <a href="../yasal_uyari.html">Yasal Uyarı</a> bölümünü inceleyiniz.<br /> 
+        Pardus hakkında merak ettikleriniz için lütfen <a href="../yardim.html">yardım</a> sayfasına başvurun.
+        <em>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</em>
         </p>
 
 <!--bar-->
         </div>
-		<table width="100%" cellpadding="0" cellspacing="0" border=0 id="altserit">
-			<tr style="background-color:#000000;">
-				<td height="25" style="padding-left:10px">Copyright 2007 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.</td>
-				
-				<td align="right" height="20" style="padding-right:10px"><a href="mailto:webgorus@uekae.tubitak.gov.tr" target="_blank">Görüşleriniz</a></td>
-			</tr>
-		</table>
+        <table width="100%" cellpadding="0" cellspacing="0" border=0 id="altserit">
+            <tr style="background-color:#000000;">
+                <td height="25" style="padding-left:10px">Copyright 2007 Ulusal Elektronik ve Kriptoloji Araştırma Enstitüsü. Tüm Hakkı Saklıdır.</td>
+                <td align="right" height="20" style="padding-right:10px"><a href="mailto:webgorus@uekae.tubitak.gov.tr" target="_blank">Görüşleriniz</a></td>
+            </tr>
+        </table>
         <div class="bottom"></div>
 <!--bar-->
 
