Fix download page, rename 2008.1 release notes, remove gui stuff from plain release notes html file

--- a/trunk/web/miss/indir.html
+++ b/trunk/web/miss/indir.html
@@ -23,8 +23,6 @@
 
     <div id="head_grey">
       <div id="blue">
-    <div id="head_grey">
-      <div id="blue">
         <map name="baslik_harita">
             <area shape="rect" href="index.html" coords="24,24,143,101" >
             <area shape="rect" href="nedir.html" coords="595,22,718,139" >
@@ -60,11 +58,13 @@
 
     <td width="661" valign="top" class="metin">
 
-        <span class="baslik">Pardus 2008.1
+        <span class="baslik">Pardus 2008.1 Hyaena hyaena
         </span>
         <br><br>
+        Pardus 2008.1 Hyaena hyaena sürümü özellikleri hakkında bilgi almak için 
+        <a href="urunler/surumnotlari/pardus-2008.1-Hyaena-hyaena-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       <p>
-        Pardus 2008.1 sürümünü indirmek için aşağıdaki bağlantıları kullanabilirsiniz.
+        Pardus 2008.1 Hyaena hyaena sürümünü indirmek için aşağıdaki bağlantıları kullanabilirsiniz:
       </p>
       <p>
         <ul> <h4 style="margin-bottom:2">KURULAN CD</h4>
@@ -74,6 +74,7 @@
             <li><a href="ftp://pardus.comu.edu.tr/pardus-cd/kurulan/2008.1">ÇOMÜ yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008.1">LKD yansısı (ftp)</a></li>
             <h4 style="margin-bottom:2">ÇALIŞAN CD</h4>
+
             <li><b>Pardus Sunucusu</b> [ <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">ftp</a>
             &nbsp;-&nbsp;<a href="http://ftp.pardus.org.tr/pub/pardus/calisan/2008.1">http</a> ]</li>
             <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/calisan/2008.1">ODTÜ yansısı(ftp)</a></li>
@@ -93,12 +94,10 @@
         <span class="baslik">Pardus 2008
         </span>
 <br><br>
-    md5sum: <b>554ae2c6f6d39225fdf4009f76b4f7b1</b><br>
-    sha1sum: <b>71d7b6774c501c180ea8ba09ef91e551ef1b3325</b><br>
         <br>
         Yardım için, <a href="belgeler/kurulum_nasil.html">kurulum kılavuzu</a>'na
-        başvurabilir, ayrıca 2008 lynx sürümü özellikleri hakkında bilgi almak için 
-        <a href="urunler/pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
+        başvurabilir, ayrıca Pardus 2008 sürümü özellikleri hakkında bilgi almak için 
+        <a href="urunler/surumnotlari/pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
       </p>
       <p>
         Pardus 2008'i indirmek için aşağıdaki bağlantıları kullanabilirsiniz.
