--- a/trunk/web/miss/urunler/index.html
+++ b/trunk/web/miss/urunler/index.html
@@ -69,8 +69,7 @@
         indirebilirsiniz. Yardım
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için
-        <a href="surumnotlari/pardus-2008.1-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
+        <a href="surumnotlari/pardus-2008.1-Hyaena-hyaena-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
 
     <br /><br />
     <span class="baslik">
@@ -86,7 +85,6 @@
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-2008-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
     <br /><br />
     <span class="baslik">
@@ -102,7 +100,6 @@
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-2007.3-Lynx-lynx-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
     <br /><br />
     <span class="baslik">
@@ -118,9 +115,8 @@
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-2007.2-Caracal-caracal-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
-      <br /><br />
+    <br /><br />
       <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007.1 Felis chaus
         </span>
@@ -134,9 +130,8 @@
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-2007.1-Felis-chaus-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
-      <p>
+      <br /><br />
       <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 2007
         </span>
@@ -150,9 +145,8 @@
         için, <a href="../belgeler/kurulum_nasil.html">kurulum belgesi</a>'ne
         başvurabilir, ayrıca 2007 sürümü özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-2007-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
-      <p>
+      <br /><br />
         <span class="baslik"><img src="../images/bullet-krm.png"> Pardus Çalışan CD</span>
     <br>
         <br>
@@ -160,10 +154,8 @@
     <br>
         <br>
         <a href="ftp://ftp.pardus.org.tr/pub/pardus/calisan">Pardus Çalışan CD</a> 2007.2 <em>11.07.2007</em>, 2007.1 <em>16.03.2007</em>, 2007 <em>18.12.2006</em>
-    <br>
-      </p>
 
-
+    <br /><br />
     <span class="baslik">
           <img src="../images/bullet-krm.png"> Pardus 1.0
         </span>
@@ -176,7 +168,6 @@
         Yukarıdaki bağlantıya tıklayarak Pardus 1.0 sürümünü
         indirebilir, özellikleri hakkında bilgi almak için 
         <a href="surumnotlari/pardus-1.0-surum-notlari-tr.html">sürüm notları</a> belgesini okuyabilirsiniz.
-      </p>
 
     </td>
   </tr>
