Remove disk manager

--- a/trunk/web/miss/eng/products/releasenotes/pardus-2008.2-Canis-aureus-detailed-changelog.html
+++ b/trunk/web/miss/eng/products/releasenotes/pardus-2008.2-Canis-aureus-detailed-changelog.html
@@ -25,7 +25,6 @@ The tool which generates this document compares two ISO9660 Pardus disc images t
 <li><a href="#br2684ctl">br2684ctl</a></li>
 <li><a href="#broadcom-wl">broadcom-wl</a></li>
 <li><a href="#ccid">ccid</a></li>
-<li><a href="#disk-manager">disk-manager</a></li>
 <li><a href="#eciadsl">eciadsl</a></li>
 <li><a href="#gegl">gegl</a></li>
 <li><a href="#hcfpcimodem">hcfpcimodem</a></li>
@@ -240,8 +239,8 @@ The tool which generates this document compares two ISO9660 Pardus disc images t
 <li><b>Image name:</b> <em>Pardus-2008.2-Canis-aureus.iso</em></li>
 <li><b>Image size:</b> <em>695.90 MB</em></li>
 <li><b>Date of release:</b> <em>30 Jan 2009</em></li>
-<li><b>Number of total packages:</b> <em>648</em></li>
-<li><b>Number of new packages:</b> <em>23</em></li>
+<li><b>Number of total packages:</b> <em>647</em></li>
+<li><b>Number of new packages:</b> <em>22</em></li>
 <li><b>Number of updated packages:</b> <em>181</em></li>
 <li><b>Download page:</b> <a href="http://www.pardus.org.tr/eng/download.html" target="_blank">Click here</li>
 </ul>
@@ -257,8 +256,6 @@ The tool which generates this document compares two ISO9660 Pardus disc images t
 <p><em>This package contains Broadcom's IEEE 802.11a/b/g/n hybrid Linux device driver for use with Broadcom's BCM4311, BCM4312, BCM4321, and BCM4322 based hardware. You must read the LICENSE.txt file in the docs directory before using this software.</em></p>
 <li><b><a name="ccid">ccid</a></b></li>
 <p><em>This package provides the source code for a generic USB CCID (Chip/Smart Card Interface Devices) driver and ICCD (Integrated Circuit(s) Card Devices).</em></p>
-<li><b><a name="disk-manager">disk-manager</a></b></li>
-<p><em>Disk Manager is an application used to administer disks on Pardus.</em></p>
 <li><b><a name="eciadsl">eciadsl</a></b></li>
 <p><em>Linux driver for ECI HiFocus ADSL USB and Globespan based modems. EciAdsl is a free Linux driver for connecting your computer to the internet, if you have a Globespan based ADSL USB modem.</em></p>
 <li><b><a name="gegl">gegl</a></b></li>
@@ -296,7 +293,7 @@ The tool which generates this document compares two ISO9660 Pardus disc images t
 <li><b><a name="tcpdump">tcpdump</a></b></li>
 <p><em>Tcpdump is a tool to print out (or save to file) the contents of packets on a network interface. It also allows limiting the number of packets collected using expressions.</em></p>
 </ul><h2><li><a name="pmstats">Package modification statistics</a> <a style="text-decoration:none;" href="#top">^^^</a></li></h2>
-<h3>181 of 648 binary packages has been changed from the release of Pardus 2008.1 to this day:</h3><ul>
+<h3>181 of 647 binary packages has been updated from the release of Pardus 2008.1 to this day:</h3><ul>
 <li><b><a name="PolicyKit-kde">PolicyKit-kde</a></b></li>
 <p>Updated on <em>2008-12-09</em> by <em>Gökçen Eraslan</em> to version <b>0.2.3</b>, release: <b>10</b><br /><div style="border:1px solid #999999; background-color:#DDDDDD; padding:3px;">Translation patches are now included. Also, desktop file for autostart is now in /etc/xdg/autostart, and file in /usr/share/autostart is a symlink to this.</div><br /></p>
 </ul><ul>
